--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,30 @@
-discord
-PyNaCl
-python-dotenv
+addict==2.4.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+asgiref==3.7.2
+async-timeout==4.0.3
+asyncio==3.4.3
+attrs==23.1.0
+cffi==1.16.0
+charset-normalizer==3.3.0
+daiquiri==3.2.1
+discord.py==2.3.2
+Django==4.2.5
+first==2.0.2
+frozenlist==1.4.0
+idna==3.4
+image==1.5.33
+kick==1.1.0
+multidict==6.0.4
+Pillow==10.0.1
+
+pycparser==2.21
+PyNaCl==1.5.0
+python-dotenv==1.0.0
+python-json-logger==2.0.7
+six==1.16.0
+sqlparse==0.4.4
+toml==0.10.2
+typing_extensions==4.8.0
+vc==2018.7.10
+yarl==1.9.2
